Añadir dependencia resend

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "formulario-2026",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.0"
+    "@supabase/supabase-js": "^2.49.0",
+    "resend": "^6.6.0"
   }
 }
